# LibraryManager

./: .gitignore  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  redis-setup.sh  ruff.toml
alembic/: env.py
alembic/versions/: 38ff208ea8d9_add_user_model.py  83d00e302892_add_user.py  8d2a9c5f506a_add_user_model.py
documentation/: roadmap.md
environment/: .env.example  .env.postgresql.example  .env.redis.example
src/: db.py  main.py  settings.py
src/adapters/api/: __init__.py
src/adapters/api/v1/: __init__.py
src/applications/users/: create_user_handler.py  login_user_handler.py  service.py
src/applications/utils/: utils.py
src/domains/auth/: token_repository.py
src/domains/core/: base_enum.py  base_exception.py  base_model.py  base_redis_repository.py  base_repository_model.py  base_uow.py  base_uow_mixin.py
src/domains/users/: enum.py  exception.py  model.py  repository.py  schema.py  security.py  uow.py  uow_mixin.py
src/domains/utils/: db_error_mapper.py
src/repositories/core/: base_model.py  base_repository_model.py  base_uow.py  db_error_mapper.py
src/repositories/repositories_core/: base_model.py
src/repositories/users/: enum.py  exception.py  model.py  repository.py  schema.py  security.py  uow.py  uow_mixin.py
src/scripts/: add_user_admin.py
test/: conftest.py
test/core/: utils.py
test/core/factories/: user.py
test/core/fixtures/: user.py
test/integration/: test_user_route.py
test/integration/test_user/: test_get_user_route.py  test_register_user_route.py
test/unit/: test_user.py  test_util.py
(+12 files in other folders)
