[project]
name = "librarymanager"
version = "0.1"
description = "web manager for library"
authors = [
    {name = "Zhukov Artem",email = "zo.sahaal.13@gmail.com"}
]
readme = "README.md"
requires-python = "3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
